# projet_c

./: Makefile  bureau_de_vote.h  bv.txt  config.h  config.status  configure  configure.in  file.c  gestionelection.glade  gestionelection.glade.bak  gestionelection.gladep  gestionobservateur.h  gestionutilisateur.c  gestionutilisateur.h  le.txt  listeElectorale_test.txt  user.txt
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  bureau_de_vote.c  bureau_de_vote.h  bv_stats.c  bv_stats.h  callbacks.c  callbacks.h  election.c  election.h  election_calcul.c  election_calcul.h  gestionelection  interface.c  interface.c.bak  interface.h  interface.h.bak  le_stats.c  liste_electorale.c  liste_electorale.h  main.c  user.c  user.h
src/.deps/: bureau_de_vote.Po  bv_stats.Po  callbacks.Po  election.Po  election_calcul.Po  gtkHelper.Po  le_stats.Po  liste_electorale.Po  user.Po
